<resources>
    <string name="app_name">Pomodoro</string>

    <string-array name="main_tabs">
        <item>New</item>
        <item>History</item>
    </string-array>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Pomodoro Intervals -->
    <string name="pref_header_data_sync">Data &amp; sync</string>
    pref_title_pomodoro_interval

    <string name="pref_title_pomodoro_interval">Pomodoro Interval</string>
    <string-array name="pref_pomodoro_interval_titles">
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>25 minutes</item>
        <item>30 minutes</item>
    </string-array>
    <string-array name="pref_pomodoro_interval_values">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>


    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    pref_pomodoro_interval_titles


    <!-- Notifications settings -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_pomodoro_notifications">Pomodoro Notifications</string>
    <string name="pref_title_sound_notifications">Sound</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>

</resources>
